--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 </head>
 
 <body>
-    <div class="container-fluid main">
+    <div class="container-fluid h-100">
         <!-- <nav class="toolbar "> -->
         <!-- <div class="toolbar row"> -->
             <div class="row items-wrapper toolbar">  
                 <div class="col col-xl-3 col-lg-12">
                     <div class="row">
-                        <div class="col col-1 col-sm-2 d-block d-xl-none text-center">
+                        <div class="col col-3 d-block d-xl-none text-left">
                             <img class="toolbar-icon" src="menu-icon.png" width="40px" height="40px"/>
                         </div>
-                        <div class="col col-10 col-sm-8 col-xl-12 text-xl-right text-center">
+                        <div class="col col-6 col-xl-12  text-center">
                             <img src="image.png" width="175px" height="75px"/>
                         </div>
-                        <div class="col col-1 col-sm-2  d-block d-xl-none text-center">
+                        <div class="col col-3 d-block d-xl-none text-right">
                             <img class="toolbar-icon" src="search-icon.png" width="40px" height="40px"/>
                         </div>
                     </div>
@@ -97,153 +97,164 @@
         <!-- </div> -->
         <!-- </nav> -->
         <div class="row main-content">
-            <!-- <div class="row center-content text-center"> -->
-                <div class="col col-12 text-center">
-                    <div class="error404 text-center">404</div>
-                    <h4 class="error-subject text-center">Oops! Page not found</h4>
-                    <p class="error-text text-center">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy tex Loer ipsum dummy tex Loer ipsum dummy texttt</p>
+            <div class="col col-12 error-main">
+                <div class="row h-100">
+                    <div class="col col-12 text-center align-self-center">
+                        <div class="error404 text-center">404</div>
+                        <h4 class="error-subject text-center">Oops! Page not found</h4>
+                        <p class="error-text text-center">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy tex Loer ipsum dummy tex Loer ipsum dummy. </p>
+                    </div>
                 </div>
-            <!-- </div> -->
-            <!-- <div class="row cards">
-                <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:</div>
-                <div class="card-wrapper">
-                    <div class="card">
-                        <div class="line1">
-                            <img class="card-icon" src="card-icon.png" height="20px">
-                            <div class="line1stext">
-                                Lorem: <strong>Ipsum</strong>
-                            </div>
-                        </div>
-                        <div class="line2" style="background-color: #20385E;">
-                            <div class="line2sub">
-                                <img class="item-image" src="image.png" height="80px">
-                            </div>
-                        </div>
-                        <div class="line3">
-                            <div class="line3sub">NO LOREM IPSUM</div> 
-                        </div>
-                        <div class="line4">TEST IO BRAND</div>
-                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
-                        <div class="line6">Dummy Text</div>
-                        <div class="line7">CLICK HERE</div>
+            </div>
+            <div class="col col-12 cards">
+                <div class="row">
+                    <div class="col col-12 text-center">
+                        <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:</div>
                     </div>
-
-                    <div class="card">
-                        <div class="line1">
-                            <img class="card-icon" src="card-icon.png" height="20px">
-                            <div class="line1stext">
-                                Lorem: <strong>Ipsum</strong>
-                            </div>
-                        </div>
-                        <div class="line2" style="background-color: #CA5252;">
-                            <div class="line2sub">
-                                <img class="item-image" src="image.png" height="80px">
-                            </div>
-                        </div>
-                        <div class="line3">
-                            <div class="line3sub">NO LOREM IPSUM</div> 
-                        </div>
-                        <div class="line4">TEST IO BRAND</div>
-                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
-                        <div class="line6">Dummy Text</div>
-                        <div class="line7">CLICK HERE</div>
-                    </div>
-
-                    <div class="card">
-                        <div class="line1">
-                            <img class="card-icon" src="card-icon.png" height="20px">
-                            <div class="line1stext">
-                                Lorem: <strong>Ipsum</strong>
-                            </div>
-                        </div>
-                        <div class="line2" style="background-color: #205E3D;">
-                            <div class="line2sub">
-                                <img class="item-image" src="image.png" height="80px">
-                            </div>
-                        </div>
-                        <div class="line3">
-                            <div class="line3sub">NO LOREM IPSUM</div> 
-                        </div>
-                        <div class="line4">TEST IO BRAND</div>
-                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
-                        <div class="line6">Dummy Text</div>
-                        <div class="line7">CLICK HERE</div>
-                    </div>
-
-                    <div class="card">
-                        <div class="line1">
-                            <img class="card-icon" src="card-icon.png" height="20px">
-                            <div class="line1stext">
-                                Lorem: <strong>Ipsum</strong>
-                            </div>
-                        </div>
-                        <div class="line2" style="background-color: #BEBEBE;">
-                            <div class="line2sub">
-                                <img class="item-image" src="image.png" height="80px">
-                            </div>
-                        </div>
-                        <div class="line3">
-                            <div class="line3sub">NO LOREM IPSUM</div> 
-                        </div>
-                        <div class="line4">TEST IO BRAND</div>
-                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
-                        <div class="line6">Dummy Text</div>
-                        <div class="line7">CLICK HERE</div>
-                    </div>
-
-                    <div class="card">
-                        <div class="line1">
-                            <img class="card-icon" src="card-icon.png" height="20px">
-                            <div class="line1stext">
-                                Lorem: <strong>Ipsum</strong>
-                            </div>
-                        </div>
-                        <div class="line2" style="background-color: #82245C;">
-                            <div class="line2sub">
-                                <img class="item-image" src="image.png" height="80px">
-                            </div>
-                        </div>
-                        <div class="line3">
-                            <div class="line3sub">NO LOREM IPSUM</div> 
-                        </div>
-                        <div class="line4">TEST IO BRAND</div>
-                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
-                        <div class="line6">Dummy Text</div>
-                        <div class="line7">CLICK HERE</div>
-                    </div>
-
-                    <div class="card">
-                        <div class="line1">
-                            <img class="card-icon" src="card-icon.png" height="20px">
-                            <div class="line1stext">
-                                Lorem: <strong>Ipsum</strong>
-                            </div>
-                        </div>
-                        <div class="line2" style="background-color: #20385E;">
-                            <div class="line2sub">
-                                <img class="item-image" src="image.png" height="80px">
-                            </div>
-                        </div>
-                        <div class="line3">
-                            <div class="line3sub">NO LOREM IPSUM</div> 
-                        </div>
-                        <div class="line4">TEST IO BRAND</div>
-                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
-                        <div class="line6">Dummy Text</div>
-                        <div class="line7">CLICK HERE</div>
-                    </div>
-
-                    
                 </div>
-                <div class="see-all">
+                <div class="row">
+                    <div class="col overflow-auto">
+                        <div class="card-wrapper">
+                            <div class="brand-card">
+                                <div class="line1">
+                                    <img class="card-icon" src="card-icon.png" height="20px">
+                                    <div class="line1stext">
+                                        Lorem: <strong>Ipsum</strong>
+                                    </div>
+                                </div>
+                                <div class="line2" style="background-color: #20385E;">
+                                    <div class="line2sub">
+                                        <img class="item-image" src="image.png" height="80px">
+                                    </div>
+                                </div>
+                                <div class="line3">
+                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                </div>
+                                <div class="line4">TEST IO BRAND</div>
+                                <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                                <div class="line6">Dummy Text</div>
+                                <div class="line7">CLICK HERE</div>
+                            </div>
 
+                            <div class="brand-card">
+                                <div class="line1">
+                                    <img class="card-icon" src="card-icon.png" height="20px">
+                                    <div class="line1stext">
+                                        Lorem: <strong>Ipsum</strong>
+                                    </div>
+                                </div>
+                                <div class="line2" style="background-color: #CA5252;">
+                                    <div class="line2sub">
+                                        <img class="item-image" src="image.png" height="80px">
+                                    </div>
+                                </div>
+                                <div class="line3">
+                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                </div>
+                                <div class="line4">TEST IO BRAND</div>
+                                <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                                <div class="line6">Dummy Text</div>
+                                <div class="line7">CLICK HERE</div>
+                            </div>
+
+                            <div class="brand-card">
+                                <div class="line1">
+                                    <img class="card-icon" src="card-icon.png" height="20px">
+                                    <div class="line1stext">
+                                        Lorem: <strong>Ipsum</strong>
+                                    </div>
+                                </div>
+                                <div class="line2" style="background-color: #205E3D;">
+                                    <div class="line2sub">
+                                        <img class="item-image" src="image.png" height="80px">
+                                    </div>
+                                </div>
+                                <div class="line3">
+                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                </div>
+                                <div class="line4">TEST IO BRAND</div>
+                                <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                                <div class="line6">Dummy Text</div>
+                                <div class="line7">CLICK HERE</div>
+                            </div>
+
+                            <div class="brand-card">
+                                <div class="line1">
+                                    <img class="card-icon" src="card-icon.png" height="20px">
+                                    <div class="line1stext">
+                                        Lorem: <strong>Ipsum</strong>
+                                    </div>
+                                </div>
+                                <div class="line2" style="background-color: #BEBEBE;">
+                                    <div class="line2sub">
+                                        <img class="item-image" src="image.png" height="80px">
+                                    </div>
+                                </div>
+                                <div class="line3">
+                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                </div>
+                                <div class="line4">TEST IO BRAND</div>
+                                <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                                <div class="line6">Dummy Text</div>
+                                <div class="line7">CLICK HERE</div>
+                            </div>
+
+                            <div class="brand-card">
+                                <div class="line1">
+                                    <img class="card-icon" src="card-icon.png" height="20px">
+                                    <div class="line1stext">
+                                        Lorem: <strong>Ipsum</strong>
+                                    </div>
+                                </div>
+                                <div class="line2" style="background-color: #82245C;">
+                                    <div class="line2sub">
+                                        <img class="item-image" src="image.png" height="80px">
+                                    </div>
+                                </div>
+                                <div class="line3">
+                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                </div>
+                                <div class="line4">TEST IO BRAND</div>
+                                <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                                <div class="line6">Dummy Text</div>
+                                <div class="line7">CLICK HERE</div>
+                            </div>
+
+                            <div class="brand-card">
+                                <div class="line1">
+                                    <img class="card-icon" src="card-icon.png" height="20px">
+                                    <div class="line1stext">
+                                        Lorem: <strong>Ipsum</strong>
+                                    </div>
+                                </div>
+                                <div class="line2" style="background-color: #20385E;">
+                                    <div class="line2sub">
+                                        <img class="item-image" src="image.png" height="80px">
+                                    </div>
+                                </div>
+                                <div class="line3">
+                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                </div>
+                                <div class="line4">TEST IO BRAND</div>
+                                <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                                <div class="line6">Dummy Text</div>
+                                <div class="line7">CLICK HERE</div>
+                            </div>
+
+                            
+                        </div>
+                    </div>
                 </div>
-            </div> -->
+                <div class="row text-center">
+                    <div class="col col-12 text-center">
+                        <div class="see-all-button" style="display: inline;">
+                            see more
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
