add see all button

--- a/index.html
+++ b/index.html
@@ -15,101 +15,93 @@
     <meta property="og:description" content="A simple HTML5 Template for new projects.">
     <meta property="og:image" content="image.png">
 
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
     <link rel="stylesheet" href="styles.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
 
 <body>
     <div class="container-fluid h-100">
-        <!-- <nav class="toolbar "> -->
-        <!-- <div class="toolbar row"> -->
-            <div class="row items-wrapper toolbar">  
-                <div class="col col-xl-3 col-lg-12">
-                    <div class="row">
-                        <div class="col col-3 d-block d-xl-none text-left">
-                            <img class="toolbar-icon" src="menu-icon.png" width="40px" height="40px"/>
-                        </div>
-                        <div class="col col-6 col-xl-12  text-center">
-                            <img src="image.png" width="175px" height="75px"/>
-                        </div>
-                        <div class="col col-3 d-block d-xl-none text-right">
-                            <img class="toolbar-icon" src="search-icon.png" width="40px" height="40px"/>
-                        </div>
+        <div class="row items-wrapper toolbar">
+            <div class="col col-xl-3 col-lg-12">
+                <div class="row">
+                    <div class="col col-3 d-block d-xl-none text-left">
+                        <img class="toolbar-icon" src="menu-icon.png" width="40px" height="40px" />
                     </div>
-                    <!-- <div class=""> -->
-                        
-                    <!-- </div> -->
-                </div>
-                <div class="col col-xl-6 text-center d-none d-xl-block">
-                    <div class="" style="display: inline; width: 520px;">
-                        <div class="link">
-                            <span class="icon">
-                                <img src="icon-green.png" width="25px" height="25px"/>
-                            </span>
-                            <span class="text">Lorem</span>
-                        </div>
-                        <div class="link">
-                            <span class="icon">
-                                <img src="icon-purple.png" width="25px" height="25px"/>
-                            </span>
-                            <span class="text">Lorem</span>
-                        </div>            
-                        <div class="link">
-                            <span class="icon">
-                                <img src="icon-yellow.png" width="25px" height="25px"/>
-                            </span>
-                            <span class="text">Lorem</span>
-                        </div>            
-                        <div class="link">
-                            <span class="icon">
-                                <img src="icon-orange.png" width="25px" height="25px"/>
-                            </span>
-                            <span class="text">Lorem</span>
-                        </div>            
-                        <div class="link">
-                            <span class="icon">
-                                <img src="icon-blue.png" width="25px" height="25px"/>
-                            </span>
-                            <span class="text">Lorem</span>
-                        </div>
+                    <div class="col col-6 col-xl-12  text-center">
+                        <img src="image.png" width="175px" height="75px" />
                     </div>
-                </div>
-                <div class="col col-xl-3 d-none d-xl-block">
-                    <div class="tb-item">
-                        <div class="link">
-                            <span class="text">About</span>
-                        </div>
-                        <div class="link">
-                            <span class="text">Contact</span>
-                        </div>
-                        <div class="link subscribe">
-                            <span class="text">Subscribe</span>
-                        </div>
+                    <div class="col col-3 d-block d-xl-none text-right">
+                        <img class="toolbar-icon" src="search-icon.png" width="40px" height="40px" />
                     </div>
                 </div>
             </div>
-        <!-- </div> -->
-        <!-- </nav> -->
+            <div class="col col-xl-6 text-center d-none d-xl-block">
+                <div class="" style="display: inline; width: 520px;">
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-green.png" width="25px" height="25px" />
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-purple.png" width="25px" height="25px" />
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-yellow.png" width="25px" height="25px" />
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-orange.png" width="25px" height="25px" />
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-blue.png" width="25px" height="25px" />
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-xl-3 d-none d-xl-block">
+                <div class="tb-item">
+                    <div class="link">
+                        <span class="text">About</span>
+                    </div>
+                    <div class="link">
+                        <span class="text">Contact</span>
+                    </div>
+                    <div class="link subscribe">
+                        <span class="text">Subscribe</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row main-content">
             <div class="col col-12 error-main">
                 <div class="row h-100">
                     <div class="col col-12 text-center align-self-center">
                         <div class="error404 text-center">404</div>
                         <h4 class="error-subject text-center">Oops! Page not found</h4>
-                        <p class="error-text text-center">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy tex Loer ipsum dummy tex Loer ipsum dummy. </p>
+                        <p class="error-text text-center">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy
+                            tex Loer ipsum dummy tex Loer ipsum dummy. </p>
                     </div>
                 </div>
             </div>
             <div class="col col-12 cards">
                 <div class="row">
                     <div class="col col-12 text-center">
-                        <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:</div>
+                        <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -128,7 +120,7 @@
                                     </div>
                                 </div>
                                 <div class="line3">
-                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                    <div class="line3sub">NO LOREM IPSUM</div>
                                 </div>
                                 <div class="line4">TEST IO BRAND</div>
                                 <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
@@ -149,7 +141,7 @@
                                     </div>
                                 </div>
                                 <div class="line3">
-                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                    <div class="line3sub">NO LOREM IPSUM</div>
                                 </div>
                                 <div class="line4">TEST IO BRAND</div>
                                 <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
@@ -170,7 +162,7 @@
                                     </div>
                                 </div>
                                 <div class="line3">
-                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                    <div class="line3sub">NO LOREM IPSUM</div>
                                 </div>
                                 <div class="line4">TEST IO BRAND</div>
                                 <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
@@ -191,7 +183,7 @@
                                     </div>
                                 </div>
                                 <div class="line3">
-                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                    <div class="line3sub">NO LOREM IPSUM</div>
                                 </div>
                                 <div class="line4">TEST IO BRAND</div>
                                 <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
@@ -212,7 +204,7 @@
                                     </div>
                                 </div>
                                 <div class="line3">
-                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                    <div class="line3sub">NO LOREM IPSUM</div>
                                 </div>
                                 <div class="line4">TEST IO BRAND</div>
                                 <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
@@ -233,7 +225,7 @@
                                     </div>
                                 </div>
                                 <div class="line3">
-                                    <div class="line3sub">NO LOREM IPSUM</div> 
+                                    <div class="line3sub">NO LOREM IPSUM</div>
                                 </div>
                                 <div class="line4">TEST IO BRAND</div>
                                 <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
@@ -241,14 +233,14 @@
                                 <div class="line7">CLICK HERE</div>
                             </div>
 
-                            
+
                         </div>
                     </div>
                 </div>
-                <div class="row text-center">
-                    <div class="col col-12 text-center">
-                        <div class="see-all-button" style="display: inline;">
-                            see more
+                <div class="row h-25">
+                    <div class="col col-12 text-center align-self-center">
+                        <div class="see-all-button">
+                            SEE ALL BRANDS
                         </div>
                     </div>
                 </div>
